# neurodegenerAI

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  LICENSE  MIGRATION.md  README.md  SECURITY.md  alembic.ini  dashboard_app.py  docker-compose.demo.yml  docker-compose.yml  env.example  preview_images.html  pyproject.toml  requirements.txt  verify_eeg.py
.github/workflows/: ci.yml  deploy-cloudrun.yml.disabled
core_api/src/api/: main.py
core_api/src/api/v1/: schemas.py
core_api/src/api/v1/endpoints/: neuro.py  trends.py
infra/cloudrun/: service.neuro.yaml  service.trends.yaml
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
neurodegenerai/: MODEL_CARD.md  requirements.txt
neurodegenerai/src/api/: main.py  schemas.py
neurodegenerai/src/data/: adni_ingest.py  eeg_gen.py  eeg_openneuro.py  features_mri.py  features_tabular.py  openneuro.py  preprocess.py
neurodegenerai/src/models/: eeg_real.py  inference.py  interpretability.py  predict.py  train_cnn.py  train_eeg.py  train_tabular.py
neurodegenerai/src/tests/: test_eeg_real.py  test_inference.py  test_models.py  test_openneuro.py
scripts/: train_eeg_real.py
shared/: __init__.py
shared/lib/: __init__.py  config.py  database.py  io_utils.py  logging.py  metrics.py  ml_utils.py  repository.py  viz.py
shared/tests/: test_config.py  test_repository.py
trend-detector/src/ingest/: reddit_stream.py
trend-detector/src/pipeline/: topics.py
trend-detector/src/tests/: test_cluster.py
trend_detector/: DISCLAIMER.md  requirements.txt
trend_detector/src/api/: main.py  schemas.py
trend_detector/src/ingest/: mock_stream.py  provider.py  twitter_stream.py
trend_detector/src/pipeline/: cluster.py  embed.py  live_topics.py  search.py
trend_detector/src/tests/: test_live_topics.py  test_search.py
