[tool.poetry]
name = "neuro-trends-suite"
version = "0.1.0"
description = "Production-ready monorepo with NeuroDegenerAI and Real-Time Trend Detector"
authors = ["Neuro-Trends Team <team@neurotrends.ai>"]
readme = "README.md"
packages = [
    {include = "shared", from = "."},
    {include = "neurodegenerai/src", from = ".", to = "neurodegenerai"},
    {include = "trend-detector/src", from = ".", to = "trend_detector"},
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
streamlit = "^1.28.1"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
numpy = "^1.24.0"
pandas = "^2.1.0"
scikit-learn = "^1.3.0"
lightgbm = "^4.1.0"
xgboost = "^2.0.0"
torch = "^2.1.0"
torchvision = "^0.16.0"
transformers = "^4.35.0"
sentence-transformers = "^2.2.2"
bertopic = "^0.15.0"
umap-learn = "^0.5.4"
hdbscan = "^0.8.33"
plotly = "^5.17.0"
matplotlib = "^3.7.0"
seaborn = "^0.13.0"
shap = "^0.43.0"
grad-cam = "^1.4.8"
nibabel = "^5.1.0"
praw = "^7.7.1"
tweepy = "^4.14.0"
sqlalchemy = "^2.0.23"
duckdb = "^0.9.0"
requests = "^2.31.0"
httpx = "^0.25.0"
python-multipart = "^0.0.6"
jinja2 = "^3.1.2"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"
typer = "^0.9.0"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.0"
flake8 = "^7.0.0"
pylint = "^3.0.0"
pre-commit = "^3.6.0"
jupyter = "^1.0.0"
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "lightgbm.*",
    "xgboost.*",
    "sklearn.*",
    "torch.*",
    "transformers.*",
    "sentence_transformers.*",
    "bertopic.*",
    "umap.*",
    "hdbscan.*",
    "plotly.*",
    "nibabel.*",
    "praw.*",
    "tweepy.*",
    "grad_cam.*",
    "shap.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["neurodegenerai/src/tests", "trend-detector/src/tests", "shared/tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=shared",
    "--cov=neurodegenerai/src",
    "--cov=trend-detector/src",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=10",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
